client/assets/styles/scss/components/help.scss
// blue stlye for all help things
.help.help {
  background: $blue-lighter;
  border: 1px solid $blue-light;
  border-radius: $input-border-radius;
  box-shadow: 0 1px 3px rgba($blue,.25);
  color: rgba($blue,.8);

  // bolded text in serviceHelpCards.js
  // TODO: class this
  b,
  .strong {
    color: $blue;
  }
}

.btn-help {
  border: 0;
  color: $gray-light;
  left: 0;
  padding: 0 12px;
  position: absolute;

  &:hover {
    color: lighten($blue,10%);
  }

  &:active,
  &.active {
    color: $blue;
  }
}

.help-top-card,
%help-top-card {
  font-size: 15px;
  left: 60px;
  max-width: none; // overwrites max-width set in popover.scss
  padding-bottom: 26px;
  position: absolute;
  transition: none;
  width: 400px;
  z-index: 1; // TODO: variable-ize this

  // "more help" and "less help" buttons
  > .btn {
    background-color: $blue-lighter;
    border-top: 1px solid rgba($blue-light,.4);
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    bottom: 0;
    font-size: 13px;
    font-weight: $weight-bold;
    height: 27px;
    left: 0;
    line-height: 18px;
    padding-bottom: 3px;
    position: absolute;
    width: 100%;

    &:hover {
      color: rgba($blue,.7);
    }

    &:active {
      color: $blue;
    }

    .iconnables {
      height: 15px;
      top: 3px;
      width: 15px;
    }
  }
}

.help-padding {
  color: transparent;
  padding: 16px 25px;
}

.help-container {
  left: $layout-navigation-width + 15px;
  position: absolute;
  right: 15px;
  z-index: 1; // TODO: variable-ize this

  &.fixed {
    position: fixed;

    .help {
      box-shadow: 0 1px 3px rgba($blue,.25);
    }
  }

  &.top {
    top: 15px;

    &.deprecated {
      top: 75px;
    }
  }

  &.bottom {
    bottom: 18px;
  }

  .modal-form & {
    left: auto;
    margin-bottom: 15px;
    position: relative;
    right: auto;
  }

  .help {
    box-shadow: none;
    display: table;
    margin: 0 auto;
    padding: 6px 24px 6px 36px;
    position: relative;
    text-align: center;

    // anchor icon
    .iconnables {
      float: left;
      margin-right: 3px;
    }
  }

  // close button
  .btn {
    left: 6px;
    opacity: .5;
    position: absolute;
    top: 6px;
    width: $input-xs;

    &:hover {
      color: $red;
      opacity: 1;
    }

    &:active {
      color: $red-dark;
      opacity: 1;
    }

    .iconnables {
      height: 100%;
      margin-right: 0;
      width: 100%;
    }
  }
}

.triggered-help-item {
  border-bottom: 1px solid rgba($blue-light,.4);
  flex-flow: row; // override grid xxs media query
  line-height: 1.2;
  overflow: visible;
  padding: 15px 15px 15px 39px;
  position: relative;

  .p {
    padding-top: 2px;
  }

  // "x" button for triggered help items
  .btn-icon {
    height: 24px;
    left: 6px;
    opacity: .5;
    padding: 0;
    position: absolute;
    top: 15px;
    width: 24px;

    &:hover {
      opacity: .75;
    }

    &:active {
      opacity: 1;
    }
  }

  // 'show me' btn
  .btn-xs {
    margin-left: 9px;
  }
}

.help-lists-wrapper {
  max-height: calc(100vh - 120px);
  overflow-y: auto;
}

.general-help-container {
  line-height: 27px;
  padding: 12px 18px;
}

.general-help-item {
  color: rgba($blue,.8);
  cursor: pointer;
  display: block;
  margin: 0 -30px;
  padding: 0 30px;

  &:hover {
    background-color: rgba($blue-light,.15);
  }

  &:active {
    background-color: rgba($blue-light,.25);
  }

  .iconnables {
    height: 13px;
    left: 6px;
    top: 2px;
    width: 13px;
  }

  // reset
  .link {
    color: currentColor;
    display: block;
    text-decoration: none;
  }
}

